# synoptic-conllu-viewer

./: README.md  SynopticView.hs  stack.yaml  synoptic-conllu-viewer.cabal
static/css/: style.css
